Modified replace spell to new behavior